[package]
name = "cqext"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cqext"
path = "src/main.rs"

[lib]
name = "cqext"
path = "src/lib.rs"

[dependencies]
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
ark-std = "0.3.0"
sha3 = "0.10.6"
fk = { git = "https://github.com/geometryresearch/fk", rev = "91143a8" }
ark-bn254 = "0.3.0"
rand_chacha = { version = "0.3.0", default-features = false }

[dev-dependencies]
ark-bn254 = "0.3.0"
rand_chacha = { version = "0.3.0", default-features = false }

[features]
debug = []
sanity = []

